--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,53 @@
   justify-content: space-between;
   background-color: grey;
 }
+.subhead{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding:10px;
+  background-color: #696969;
+}
+.subhead2{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding:10px;
+  background-color: #696969;
+}
+#sh{
+  width: 150px;
+  text-align: left;
+}
+#sh2{
+  width: 150px;
+  text-align: left;
+}
 .home{
-  padding-left: 20px;
   padding-top: 5px;
   font-size: xx-large;
-
+  background-color: white;
+  padding-left:10px;
+  border-top: 5px solid gray;
+  border-left: 15px solid gray;
+  border-right: 5px solid gray;
+}
+#icon{ 
+  width: 20px;
+  height: 17px;
+  background-color: white;
+  border: 2px solid white;
+}
+.search-input{
+  border: 2px solid white;
 }
 .search{
+  display: flex;
   padding-top: 15px;
   padding-right: 20px;
   border-radius: 15px;
+  justify-content: center;
+  align-items: center ;
 }
 #s{
   height: 60px;
@@ -32,7 +69,7 @@
 }
 #art{
   padding-left: 20px;
-  padding-top: 5rem;
+  margin-top: 80px;
   font-size: x-large;
   border-bottom: 2px solid gray;
 }
@@ -46,20 +83,24 @@
   margin-top: 10px;
   padding-bottom: 10px;
   font-size: large;
-  color: white;
 
 }
-#a{
-  text-decoration: none;
+#s3{
   color: white;
-}
-.topsongs{
-  border-bottom: 2px solid gray;
+  padding-left: 10px;
+  text-decoration: none;
 }
 #songsname{
   display: flex;
-  height: 80px;
-  justify-content: space-around;
+  height: 100px;
+  justify-content: space-between;
+  background-color: white;
+}
+#design1{
+  border: 2px solid gray;
+}
+#design2{
+  border: 2px solid gray;
 }
 
 .divimg{
@@ -69,21 +110,38 @@
   width: 80px;
   height: 80px;
 }
+#imgcontrol{
+  margin-left: 40px;
+}
 #song-control{
-  padding-top: 30px;
+  text-align: center;
+  padding-top: 25px;
+  border-left: 2px solid gray;
+
+  /* margin: auto; */
+  width: 200px;
+  /* padding-top: 30px; */
 }
 .starstyle{
+  width: 180px;
   display: flex;
   justify-content: space-around;
   padding-top: 30px;
+  margin-right: 50px;
+  border-left: 2px solid gray;
+
 }
 #artistinfo{
   display: flex;
   justify-content: space-around;
   line-height: 80px;
-  border-bottom: 2px solid gray;
+  /* border-bottom: 2px solid gray; */
 }
-/* Add New Song CSS */
+#ai{
+  width: 450px;
+  text-align: center;
+  border-right: 2px solid gray;
+}
 .name{
   padding : 12px;
   width: 200px;
@@ -91,7 +149,7 @@
  
    .input-div{
      padding: 10px;   
-     width: 40%;
+     width: 50%;
      display: flex;
      flex-direction: column;
    }
@@ -100,14 +158,73 @@
       padding:8px;
       
    }
+
+   #add-artist{
+     display: flex;
+     flex-direction: row;
+   }
+
+   .add-art-button{
+     width: 90px;
+   }
  
    .form-control{
+     margin: auto;
+     margin-top: 80px;
      width: 50%;
      border: 2px solid black;
      justify-content: center;
    }
+
+   .popup-form-control{
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 80%;
+    border: 2px solid black;
+    justify-content: center;
+  }
  
    .input-controls{
      display: flex;
      flex-direction: row;
    }  
+
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+
+.close-icon {
+  content: 'x';
+  cursor: pointer;
+  position: fixed;
+  right: calc(15% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
+}
