--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 
+
 .nav{
-  height: 60px;
+  padding: 1em 1.2em;
+  /* height: 60px; */
   display: flex;
   justify-content: space-between;
   background-color: grey;
@@ -28,15 +30,15 @@
   text-align: left;
 }
 .home{
-  padding-top: 5px;
-  font-size: xx-large;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 1.5rem;
   background-color: white;
-  padding-left:10px;
-  border-top: 5px solid gray;
-  border-left: 15px solid gray;
-  border-right: 5px solid gray;
 }
 #icon{ 
+  padding: 0.35em;
+  border-start-end-radius: 10px;
+  border-end-end-radius: 10px;
   width: 20px;
   height: 17px;
   background-color: white;
@@ -44,7 +46,12 @@
 }
 .search-input{
   border: 2px solid white;
+  padding: 0.5em;
+  border-radius: 10px;
+  border-end-end-radius: 0px;
+  border-start-end-radius: 0px;
 }
+
 .search{
   display: flex;
   padding-top: 15px;
@@ -54,6 +61,7 @@
   align-items: center ;
 }
 #s{
+  margin: 1.5em 0px;
   height: 60px;
   display: flex;
   justify-content: space-between;
@@ -62,9 +70,10 @@
   border-bottom: 2px solid gray;
 }
 #s1{
+  margin-top: 10px;
   padding-left: 20px;
   padding-top: 5px;
-  font-size: x-large;
+  font-size: 1.5rem;
   
 }
 #art{
@@ -76,18 +85,18 @@
 #s2{
   background-color: rgb(89, 97, 89);
   padding-top: 10px;
-  padding-right: 20px;
+  padding: 0.7em;
   margin-right: 20px;
   border-radius: 5px;
   height: 20px;
+  font-weight: 600;
   margin-top: 10px;
-  padding-bottom: 10px;
   font-size: large;
 
 }
 #s3{
   color: white;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   text-decoration: none;
 }
 #songsname{
@@ -98,9 +107,11 @@
 }
 #design1{
   border: 2px solid gray;
+  margin: 0.5em 1em;
 }
 #design2{
   border: 2px solid gray;
+  margin: 0.5em 1em;
 }
 
 .divimg{
