Added some button functionality

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,10 @@
 }
 #s3{
   color: white;
-  /* padding-left: 10px; */
+  text-decoration: none;
+}
+#cancel-btn-color{
+  color: black;
   text-decoration: none;
 }
 #songsname{
@@ -168,6 +171,21 @@
    .input{
       padding:8px;
       
+   }
+   .input-btn
+   {
+     
+     display: flex;
+     
+   }
+   .cancel-btn{
+     border:1px solid #767676;
+     border-radius: 2px;
+     margin-left: 3px;
+     width: auto;
+     color: black;
+     text-decoration: none;
+     background-color: #E5E5E5;
    }
 
    #add-artist{
