--- a/src/App.css
+++ b/src/App.css
@@ -84,13 +84,13 @@
 }
 #s2{
   background-color: rgb(89, 97, 89);
-  padding-top: 10px;
-  padding: 0.7em;
+  /* padding-top: 10px; */
+  padding: 10px;
   margin-right: 20px;
   border-radius: 5px;
   height: 20px;
   font-weight: 600;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   font-size: large;
 
 }
@@ -170,8 +170,13 @@
  
    .input{
       padding:8px;
-      
    }
+
+   .errorMessage {
+     color: red;
+     font-size: 0.7rem;
+   }
+
    .input-btn
    {
      
